spacing fixes

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ h1 {
   float: right;
   font-size: 12px;
   font-family: arial;
+  margin-top: 12px;
   margin-left: 2px;
   color: #bfb8be;
 }
